--- a/unknown_857ztx.emergency_lime_juice.json
+++ b/unknown_857ztx.emergency_lime_juice.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_857ztx.emergency_lime_juice",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_857ztx.emergency_lime_juice",
 	"sector": "K_1684",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572665572096
+		},
+		{
+			"type": "died",
+			"when": 1572918759384
 		}
 	],
 	"next_scrape": 1572957951490,
@@ -97,6 +101,6 @@
 			]
 		}
 	],
-	"updt": 1572915149117,
-	"edit": 103
+	"updt": 1572917630132,
+	"edit": 104
 }
