--- a/unknown_857ztx.log.json
+++ b/unknown_857ztx.log.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_857ztx.log",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_857ztx.log",
 	"sector": "K_4785",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565855292286
+		},
+		{
+			"type": "died",
+			"when": 1572918894039
 		}
 	],
 	"scrape_ct": 18,
@@ -160,6 +164,6 @@
 			]
 		}
 	],
-	"updt": 1570680362275,
-	"edit": 181
+	"updt": 1570695018044,
+	"edit": 182
 }
